# polymarket-kalshi-arbitrage-bot

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FILE_STRUCTURE.txt  FILE_STRUCTURE_EXPLAINED.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  deny.toml  docker-compose.yml  install.sh  package.json  rustfmt.toml
config/: default.toml
docs/: API.md  ARCHITECTURE.md
scripts/: build-macos.sh  build-windows.bat  build.js  setup.js
src/: constants.js  index.d.ts  index.js  keychain.js  lib.rs  main.rs  provider.js  utils.js
src/api/: kalshi.rs  mod.rs  polymarket.rs
src/arbitrage/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/models/: mod.rs
src/utils/: mod.rs
test/: index.test.js
tests/: integration_tests.rs
